--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.breadandletter.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+6018 373 8570</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Selangor, Malaysia</span></li>
                 </ul>
               </div>
@@ -108,7 +108,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree of Marketing</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Jefri.msa@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Language:</strong> <span>福建话 (Fújiàn huà) (Mother tounge), Bahasa Indonesia (Native), <br>English (Proficient), <Br>  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Language:</strong> <span>福建话 (Fújiàn huà)(Mother tounge), Bahasa Indonesia (Native), <br>English (Proficient), <Br>  </span></li>
                 </ul>
               </div>
             </div>
