--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Training and Quality Assistant Manager.</h3>
             <p class="fst-italic">
-             Lean Six Sigma Green Belt || Experienced Training and Quality Supervisor Driving High Performance and Growth.
+             Lean Six Sigma Green Belt || Experienced Training and Quality Assistant Manager Driving High Performance and Growth.
             </p>
             <div class="row">
               <div class="col-lg-6">
