--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor Degree of Marketing</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>Jefri.msa@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Language:</strong> <span>福建话 (Fújiàn huà)(Mother tounge), Bahasa Indonesia (Native), <br>English (Proficient), <Br>  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Language:</strong> <span>福建话 (Fújiàn huà)(Mother tounge), <br>潮州话 (Cháozhōuhuà), <br>Bahasa Indonesia (Native), <br>English (Proficient), <Br>  </span></li>
                 </ul>
               </div>
             </div>
