--- a/index.html
+++ b/index.html
@@ -308,6 +308,20 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+				<h4>Rotational Operation Manager</h4>
+				<h5>July 2024 – Present</h5>
+				<p><em>Genpact</em></p>
+				<ul>
+					<li>Oversee daily operations and manage a team of supervisors and agents.</li>
+					<li>Monitor and analyse performance metrics to identify areas for improvement.</li>
+					<li>Use data and analytics to drive decision-making and optimize workflows.</li>
+					<li>Oversee the implementation and maintenance of contact centre technologies and tools.</li>
+					<li>Ensure systems are up-to-date and functioning properly.</li>
+					<li>Communicate operational updates and performance reports to senior management.</li>
+					<li>Collaborate with other departments to align on company goals and initiatives.</li>
+				</ul>
+			</div>
+			<div class="resume-item">
               <h4>Assistant Manager (Training and Quality)</h4>
               <h5>September 2022 – Present</h5>
               <p><em>Genpact, Selangor, Malaysia </em></p>
