--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Training and Quality Assistant Manager.</h3>
+            <h3>Contact Center Manager - Operation - Training and Quality.</h3>
             <p class="fst-italic">
              Lean Six Sigma Green Belt || Experienced Training and Quality Assistant Manager Driving High Performance and Growth.
             </p>
