--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-				<h4>Rotational Operation Manager</h4>
+				<h4>Contact Center Manager - Operation</h4>
 				<h5>July 2024 – Present</h5>
 				<p><em>Genpact</em></p>
 				<ul>
