--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
     <div class="section-title">
       <h2>Projects</h2>
-      <p>During my time with the organization, I have contributed to few projects as below.</p>
+      <p>During my time with the organization, I have initiated, contributed to, and developed several key projects, including the following:</p>
     </div>
 
     <div class="row">
@@ -803,7 +803,7 @@
         <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>nhom.me</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
