--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="row">
           <div class="col-lg-6">
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.breadandletter.com</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://www.breadandletters.com" target="_blank" rel="noopener noreferrer"><span>breadandletters.com</span></a></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span></span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Selangor, Malaysia</span></li>
 			  <li><i class="bi bi-chevron-right"></i> <strong>Certification:</strong></li>
